# HauntedCity

./: CMakeLists.txt  PrivacyPolicy  README.md
Classes/: AppDelegate.cpp  CityScene.cpp  CityScene.h  GameOverScene.cpp  GameOverScene.h  GameRules.cpp  GameRules.h  LevelClearedMenu.cpp  LevelClearedMenu.h  LevelSetter.cpp  LevelSetter.h  MainMenu.cpp  MainMenu.h  SDKBox.cpp  SDKBox.h  ScrollingBg.cpp  ScrollingBg.h
Classes/Classes/: CityScene.cpp  CityScene.h  MainMenu.cpp  MainMenu.h  ScrollingBg.h
Resources/: running.plist  sdkbox_config.json
app/: AndroidManifest.xml  build.gradle  proguard-rules.pro  project.properties
proj.android/: local.properties  settings.gradle
